# requireris

./: .gitignore  MANIFEST.in  Requireris.txt  account.py  auth.py  exceptions.py  httpd.py  opts.py  pyproject.toml  requirements.txt  requireris.py
requireris/: __init__.py  __main__.py  account.py  auth.py  database.py  exceptions.py  httpd.py  match.py  opts.py  totp.py  utils.py
requireris/httpd/: __init__.py  app.py  asgi.py  fastapi_utils.py  schemas.py
requireris/www/: index.html
requireris/www/css/: bootstrap.css
requireris/www/js/: script.js
requireris/www/templates/: get.html  index.html
tests/: test_database.py  test_totp.py  test_utils.py
tests/httpd/: test_app.py  test_asgi.py  test_fastapi_utils.py  test_schemas.py
www/css/: bootstrap.min.css
