[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "requireris"
version = "2.0.0"
dependencies = [
    "Jinja2==3.*",
]

[project.urls]
homepage = "https://github.com/entwanne/requireris"

[project.scripts]
requireris = "requireris.__main__:main"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-mock",
]

[tools.setuptools.package-data]
requireris = "www/*"
